NIAD-965: Create pathology record, pathology record mapper and bundle mapper for message translator component.